log
Thu 20 Apr 2023 09:22:59 PM UTC: 
 tests:  1|8
total_score: 0/70
eb693d5
Thu 20 Apr 2023 11:24:42 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
459e996
Fri 21 Apr 2023 12:54:04 PM UTC: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:16: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   75 |     TreeNode * aux;
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
f0634a3
